// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with error message 1`] = `
.c3 {
  color: #000000;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  font-size: 3rem;
  line-height: 3rem;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c14 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c18 {
  color: #E52630;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
  width: 100%;
}

.c15 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c19 {
  display: inline-block;
  padding: 1.5rem 1rem 1rem;
  width: 100%;
  z-index: 1;
  margin-top: -10px;
  background-color: #FAE1E2;
  border-radius: 0.5rem;
  font-weight: bold;
}

.c19:before {
  position: relative;
  content: '';
  top: 1px;
  margin-right: 3px;
  background: url(mock.asset) left 0/100% no-repeat;
  width: 18px;
  height: 19px;
  display: inline-block;
  vertical-align: top;
  color: #E52630;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E52630;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17:focus {
  border: 1px solid #666;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c10 {
  text-align: left;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
  width: auto;
}

.c1:hover,
.c1:focus {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

.c24 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  color: #FFFFFF;
  background-color: #2C0230;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
}

.c20 {
  margin-top: 1rem;
}

.c20 input {
  text-align: center;
  width: 100%;
  font-size: 1rem;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
}

.c22 p {
  font-size: 1rem;
  line-height: 2rem;
}

.c22 p a {
  font-size: 1rem;
  color: #FFFFFF;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem 0;
}

.c13 {
  width: 100%;
}

.c8 {
  margin-bottom: 1.5rem;
}

.c21 {
  width: 100%;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  padding: 1rem 0.5rem;
  background: #E52630;
  border: none;
  border-radius: 100px;
}

.c21:active,
.c21:focus,
.c21:hover {
  background-color: #961D35;
}

.c0 {
  width: 35px;
  height: 35px;
  display: inline-block;
}

.c4 {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  z-index: 100;
  top: 0;
  left: 0;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 div[aria-modal='true'] {
  padding: 2rem;
}

.c23 {
  position: absolute;
  top: 0;
  right: 0;
  width: 40px;
  height: 40px;
  margin-left: 0;
}

.c6 {
  width: 100%;
}

.c6 input {
  font-size: 1rem;
}

@media (min-width:740px) {
  .c17 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c20 input {
    font-size: 1.25rem;
    max-width: 180px;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: auto;
    padding: 1rem 2rem;
    margin: 0 auto 2rem;
  }
}

@media (min-width:740px) {
  .c23 {
    margin: 4rem 0 0;
    right: 25%;
  }
}

@media (min-width:740px) {
  .c6 {
    margin-top: 4rem;
    width: 50%;
  }

  .c6 input {
    font-size: 1.25rem;
  }
}

<div>
  <div
    className="c0"
    data-test="header-esu"
    onKeyDown={[Function]}
  >
    <a
      className="c1"
      data-test="header-esu-icon"
      href="#"
      onClick={[Function]}
      rel="noopener noreferrer"
      role="button"
      size="auto"
      tabIndex="0"
      target="_self"
      title="Sign up for emails"
    >
      <img
        alt="Sign up for emails"
        className="c2"
        src="mock.asset"
      />
      <span
        className="c3"
        color="black"
        size="md"
      >
        Sign up for emails
      </span>
    </a>
    <div
      className="c4"
    >
      <div
        aria-modal="true"
        className="c5 c6"
      >
        <h2
          className="c7 c8"
          color="inherit"
          size="xxl"
        >
          Stay in the know!
        </h2>
        <div
          className="c9"
        >
          <div
            className="c10"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Get regular email updates and info on what we're up to!</p>",
              }
            }
          />
        </div>
        <form
          className="c11"
          onSubmit={[Function]}
        >
          <label
            className="c12 c13"
            htmlFor="email"
          >
            <span
              className="c14 c15"
              color="inherit"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "email",
                }
              }
              size="s"
            />
            <div
              className="c16"
            >
              
              <input
                aria-label="Email address"
                className="c17"
                id="email"
                name="email"
                onChange={[Function]}
                placeholder="example@youremail.com"
                required={false}
                type="email"
                value=""
              />
            </div>
            <span
              className="c18"
              color="red"
              data-test="error-message"
              size="sm"
            >
              <span
                className="c19"
              >
                invalid email
              </span>
            </span>
          </label>
          <div
            className="c20"
          >
            <input
              className="c21"
              color="red"
              data-test="subscribe-button"
              onClick={[Function]}
              type="submit"
              value=" Subscribe"
            />
          </div>
        </form>
        <div
          className="c22"
        >
          <div
            className="c10"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Our <a class=\\"link link--white inline\\" href=\\"/privacy-notice\\">Privacy Policy</a> describes how we handle and protect your information.<br><br>If you are under 18, please make sure you have your parents’ permission before providing us with any personal details.</p>",
              }
            }
          />
        </div>
      </div>
      <a
        className="c1 c23"
        data-test="header-esu-icon"
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
        role="button"
        size="auto"
        tabIndex="0"
        target="_self"
        title="Close email sign-up"
      >
        <img
          alt="Close email sign-up"
          className="c2"
          src="mock.asset"
        />
        <span
          className="c24"
        >
          (opens in new window)
        </span>
        <span
          className="c3"
          color="black"
          size="md"
        >
          Close email sign-up
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly with modal closed 1`] = `
.c3 {
  color: #000000;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
  width: auto;
}

.c1:hover,
.c1:focus {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

.c0 {
  width: 35px;
  height: 35px;
  display: inline-block;
}

<div>
  <div
    className="c0"
    data-test="header-esu"
    onKeyDown={[Function]}
  >
    <a
      className="c1"
      data-test="header-esu-icon"
      href="#"
      onClick={[Function]}
      rel="noopener noreferrer"
      role="button"
      size="auto"
      tabIndex="0"
      target="_self"
      title="Sign up for emails"
    >
      <img
        alt="Sign up for emails"
        className="c2"
        src="mock.asset"
      />
      <span
        className="c3"
        color="black"
        size="md"
      >
        Sign up for emails
      </span>
    </a>
  </div>
</div>
`;

exports[`renders correctly with modal open 1`] = `
.c3 {
  color: #000000;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  font-size: 3rem;
  line-height: 3rem;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c14 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
  width: 100%;
}

.c15 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17:focus {
  border: 1px solid #666;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c10 {
  text-align: left;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
  width: auto;
}

.c1:hover,
.c1:focus {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

.c22 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  color: #FFFFFF;
  background-color: #2C0230;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
}

.c18 {
  margin-top: 1rem;
}

.c18 input {
  text-align: center;
  width: 100%;
  font-size: 1rem;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
}

.c20 p {
  font-size: 1rem;
  line-height: 2rem;
}

.c20 p a {
  font-size: 1rem;
  color: #FFFFFF;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem 0;
}

.c13 {
  width: 100%;
}

.c8 {
  margin-bottom: 1.5rem;
}

.c19 {
  width: 100%;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  padding: 1rem 0.5rem;
  background: #E52630;
  border: none;
  border-radius: 100px;
}

.c19:active,
.c19:focus,
.c19:hover {
  background-color: #961D35;
}

.c0 {
  width: 35px;
  height: 35px;
  display: inline-block;
}

.c4 {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  z-index: 100;
  top: 0;
  left: 0;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 div[aria-modal='true'] {
  padding: 2rem;
}

.c21 {
  position: absolute;
  top: 0;
  right: 0;
  width: 40px;
  height: 40px;
  margin-left: 0;
}

.c6 {
  width: 100%;
}

.c6 input {
  font-size: 1rem;
}

@media (min-width:740px) {
  .c17 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c18 input {
    font-size: 1.25rem;
    max-width: 180px;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: auto;
    padding: 1rem 2rem;
    margin: 0 auto 2rem;
  }
}

@media (min-width:740px) {
  .c21 {
    margin: 4rem 0 0;
    right: 25%;
  }
}

@media (min-width:740px) {
  .c6 {
    margin-top: 4rem;
    width: 50%;
  }

  .c6 input {
    font-size: 1.25rem;
  }
}

<div>
  <div
    className="c0"
    data-test="header-esu"
    onKeyDown={[Function]}
  >
    <a
      className="c1"
      data-test="header-esu-icon"
      href="#"
      onClick={[Function]}
      rel="noopener noreferrer"
      role="button"
      size="auto"
      tabIndex="0"
      target="_self"
      title="Sign up for emails"
    >
      <img
        alt="Sign up for emails"
        className="c2"
        src="mock.asset"
      />
      <span
        className="c3"
        color="black"
        size="md"
      >
        Sign up for emails
      </span>
    </a>
    <div
      className="c4"
    >
      <div
        aria-modal="true"
        className="c5 c6"
      >
        <h2
          className="c7 c8"
          color="inherit"
          size="xxl"
        >
          Stay in the know!
        </h2>
        <div
          className="c9"
        >
          <div
            className="c10"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Get regular email updates and info on what we're up to!</p>",
              }
            }
          />
        </div>
        <form
          className="c11"
          onSubmit={[Function]}
        >
          <label
            className="c12 c13"
            htmlFor="email"
          >
            <span
              className="c14 c15"
              color="inherit"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "email",
                }
              }
              size="s"
            />
            <div
              className="c16"
            >
              
              <input
                aria-label="Email address"
                className="c17"
                id="email"
                name="email"
                onChange={[Function]}
                placeholder="example@youremail.com"
                required={false}
                type="email"
                value=""
              />
            </div>
            
          </label>
          <div
            className="c18"
          >
            <input
              className="c19"
              color="red"
              data-test="subscribe-button"
              onClick={[Function]}
              type="submit"
              value=" Subscribe"
            />
          </div>
        </form>
        <div
          className="c20"
        >
          <div
            className="c10"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Our <a class=\\"link link--white inline\\" href=\\"/privacy-notice\\">Privacy Policy</a> describes how we handle and protect your information.<br><br>If you are under 18, please make sure you have your parents’ permission before providing us with any personal details.</p>",
              }
            }
          />
        </div>
      </div>
      <a
        className="c1 c21"
        data-test="header-esu-icon"
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
        role="button"
        size="auto"
        tabIndex="0"
        target="_self"
        title="Close email sign-up"
      >
        <img
          alt="Close email sign-up"
          className="c2"
          src="mock.asset"
        />
        <span
          className="c22"
        >
          (opens in new window)
        </span>
        <span
          className="c3"
          color="black"
          size="md"
        >
          Close email sign-up
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly with success message 1`] = `
.c3 {
  color: #000000;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  font-size: 3rem;
  line-height: 3rem;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c10 {
  text-align: left;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
  width: auto;
}

.c1:hover,
.c1:focus {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

.c13 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  color: #FFFFFF;
  background-color: #2C0230;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
}

.c11 p {
  font-size: 1rem;
  line-height: 2rem;
}

.c11 p a {
  font-size: 1rem;
  color: #FFFFFF;
}

.c8 {
  margin-bottom: 1.5rem;
}

.c0 {
  width: 35px;
  height: 35px;
  display: inline-block;
}

.c4 {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  z-index: 100;
  top: 0;
  left: 0;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 div[aria-modal='true'] {
  padding: 2rem;
}

.c12 {
  position: absolute;
  top: 0;
  right: 0;
  width: 40px;
  height: 40px;
  margin-left: 0;
}

.c6 {
  width: 100%;
}

.c6 input {
  font-size: 1rem;
}

@media (min-width:740px) {
  .c12 {
    margin: 4rem 0 0;
    right: 25%;
  }
}

@media (min-width:740px) {
  .c6 {
    margin-top: 4rem;
    width: 50%;
  }

  .c6 input {
    font-size: 1.25rem;
  }
}

<div>
  <div
    className="c0"
    data-test="header-esu"
    onKeyDown={[Function]}
  >
    <a
      className="c1"
      data-test="header-esu-icon"
      href="#"
      onClick={[Function]}
      rel="noopener noreferrer"
      role="button"
      size="auto"
      tabIndex="0"
      target="_self"
      title="Sign up for emails"
    >
      <img
        alt="Sign up for emails"
        className="c2"
        src="mock.asset"
      />
      <span
        className="c3"
        color="black"
        size="md"
      >
        Sign up for emails
      </span>
    </a>
    <div
      className="c4"
    >
      <div
        aria-modal="true"
        className="c5 c6"
      >
        <h2
          className="c7 c8"
          color="inherit"
          size="xxl"
        >
          Stay in the know!
        </h2>
        <div
          className="c9"
        >
          <div
            className="c10"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Thanks! Your first email will be with you shortly</p>",
              }
            }
          />
        </div>
        <div
          className="c11"
        >
          <div
            className="c10"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Our <a class=\\"link link--white inline\\" href=\\"/privacy-notice\\">Privacy Policy</a> describes how we handle and protect your information.<br><br>If you are under 18, please make sure you have your parents’ permission before providing us with any personal details.</p>",
              }
            }
          />
        </div>
      </div>
      <a
        className="c1 c12"
        data-test="header-esu-icon"
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
        role="button"
        size="auto"
        tabIndex="0"
        target="_self"
        title="Close email sign-up"
      >
        <img
          alt="Close email sign-up"
          className="c2"
          src="mock.asset"
        />
        <span
          className="c13"
        >
          (opens in new window)
        </span>
        <span
          className="c3"
          color="black"
          size="md"
        >
          Close email sign-up
        </span>
      </a>
    </div>
  </div>
</div>
`;
